using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Plains : TerrainTypes
{

    public Plains()
    {
        moveMod = 0;
        atkModUnit = Types.siege;
        atkMod = 0.2f;
        defMod = 0;
    }
    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
