using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Shallow : TerrainTypes
{

    public Shallow()
    {
        moveMod = -1;
        defMod = -0.2f;
    }
    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
